--- a/Unicorn_tests.tex
+++ b/Unicorn_tests.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{tikz}
+\usepackage{hyperref}
 \usetikzlibrary{decorations}
 \usetikzlibrary{decorations.pathmorphing}
 
@@ -12,9 +13,9 @@
 
 \maketitle
 
-\section{Llama 3 70B-instruct}
+\section{\href{https://replicate.com/meta/meta-llama-3-8b-instruct}{Llama 3 8B-instruct}}
 
-\subsection{First - 4}
+\subsection{First - 2024-04-18 - "Draw a unicorn in TikZ"}
 
 \begin{tikzpicture}
 % Body
@@ -33,7 +34,9 @@
 \draw [fill=black] (0.5,1.2) circle (0.2);
 \end{tikzpicture}
 
-\subsection{Second}
+\section{\href{https://replicate.com/meta/meta-llama-3-70b-instruct}{Llama 3 70B-instruct}}
+
+\subsection{First - 2024-04-18 - "Draw a unicorn in TikZ"}
 
 \begin{tikzpicture}
   % Body
@@ -64,8 +67,9 @@
   }
 \end{tikzpicture}
 
-\section{Qwen1.5 110B-Chat-demo}
-\subsection{First - 4/20/2024}
+\section{\href{https://huggingface.co/spaces/Qwen/Qwen1.5-110B-Chat-demo}{Qwen1.5 110B-Chat-demo}}
+
+\subsection{First - 2024-04-20 - "Draw a unicorn in TikZ"}
 \begin{tikzpicture}[scale=1]
 
 % Body
@@ -94,7 +98,7 @@
 
 \end{tikzpicture}
 
-\subsection{Second - 4/20/2024}
+\subsection{Second - 2024-04-20 - "Draw a detailed unicorn in TikZ. Hold nothing back."}
 \begin{tikzpicture}[scale=1.5]
     % Body
     \draw[fill=gray!20] (0,0) to [out=60,in=240] (1,1) 
